# neuro-sketch

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/: types.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/hooks/: useWasm.ts
src/app/rating/: layout.tsx  page.tsx
src/app/rating/components/: RatingCanvas.tsx  RatingHeader.tsx  RatingSidebar.tsx
src/components/: Header.tsx  Select.tsx  Sidebar.tsx
src/lib/: renderWasmImage.ts
src/store/: useSettingsStore.ts
wasm/neuro_sketch_gen/: Cargo.toml
wasm/neuro_sketch_gen/src/: helpers.rs  lib.rs  params.rs
wasm/neuro_sketch_gen/src/stimuli/: mod.rs  palette.rs
wasm/neuro_sketch_gen/src/stimuli/noise/: basic.rs  mod.rs  perlin.rs
