[package]
name = "neuro_sketch_gen"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
noise = "0.9.0"
rand = "0.9.2"
rand_pcg = "0.9.0"
wasm-bindgen = "0.2"

[features]
default = ["console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
